--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "art-sale",
-    "version": "0.0.1",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Alex Bardanov",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.13.3",
-        "cookie-parser": "^1.3.5",
-        "express": "^4.13.3",
-        "express-session": "^1.11.3",
-        "mongoose": "^4.1.1",
-        "passport": "^0.2.2",
-        "passport-facebook": "^2.0.0"
-    },
-    "engines": {
-        "node": "^0.12.0"
-    }
+  "name": "art-sale",
+  "version": "0.0.1",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Alex Bardanov",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.13.3",
+    "express-session": "^1.11.3",
+    "mongoose": "^4.1.1",
+    "node-uuid": "^1.4.3",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0"
+  },
+  "engines": {
+    "node": "^0.12.0"
+  }
 }
