--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "jade": "^1.11.0",
     "mongoose": "^4.1.1",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.2",
