--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alex Bardanov",
   "license": "ISC",
   "dependencies": {
+    "babel": "^5.8.21",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
