--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel": "^5.8.21",
     "body-parser": "^1.13.3",
+    "browserify": "^11.0.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
@@ -18,9 +19,13 @@
     "mongoose": "^4.1.1",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.2",
-    "passport-facebook": "^2.0.0"
+    "passport-facebook": "^2.0.0",
+    "react": "^0.13.3"
   },
   "engines": {
     "node": "^0.12.0"
+  },
+  "devDependencies": {
+    "babelify": "^6.1.3"
   }
 }
