--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "art-sale",
+  "name": "artail",
   "version": "0.0.1",
   "description": "",
   "main": "app.js",
@@ -17,6 +17,7 @@
     "express-session": "^1.11.3",
     "jade": "^1.11.0",
     "mongoose": "^4.1.1",
+    "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
