--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "mongoose": "^4.1.1",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
+    "object-assign": "^3.0.0",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "superagent": "^1.3.0"
   },
   "engines": {
     "node": "^0.12.0"
