--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "object-assign": "^3.0.0",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
+    "query-string": "^2.4.0",
     "react": "^0.13.3",
-    "superagent": "^1.3.0"
+    "superagent": "^1.3.0",
+    "ws": "^0.7.2"
   },
   "engines": {
     "node": "^0.12.0"
