--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "object-assign": "^3.0.0",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
+    "pubsub-js": "^1.5.2",
     "query-string": "^2.4.0",
     "react": "^0.13.3",
     "superagent": "^1.3.0",
